Git Error: Another git process seems to be running in this repository, e.g. an editor opened by 'git commit'. Please make sure all processes are terminated then try again. If it still fails, a git process may have crashed in this repository earlier: remove the file manually to continue. ========== I've removed this file per StackOverflow https://stackoverflow.com/questions/38004148/another-git-process-seems-to-be-running-in-this-repository

--- a/src/components/01-Menu/menu.css
+++ b/src/components/01-Menu/menu.css
@@ -7,6 +7,7 @@
 }
 
 a {
+    font-family: MinistryofMoron;
     grid-template-rows: 1fr 1fr 1fr;
     text-decoration: none;
     word-spacing: 2vw;
